chore: fix ui jump on scroll up button

--- a/client/styles.css
+++ b/client/styles.css
@@ -38,18 +38,11 @@ body {
   border-bottom: 1px solid var(--color-border-light);
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .go-back-up {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,7 +56,7 @@ body {
   height: 2.5rem;
   cursor: pointer;
   z-index: 100;
-  transition: fadeIn 0.3s;
+  transition: opacity 0.3s;
 }
 
 .go-back-up:hover {
@@ -75,11 +68,17 @@ body {
 }
 
 .go-back-up.show {
-  display: flex;
-  position: fixed;
+  visibility: visible;
   opacity: 1;
-  animation: fadeIn 0.3s;
   pointer-events: auto;
+  transition-delay: 0.3s;
+}
+
+.your-button:not(.visible) {
+  transition-delay: 0s;
+  transition:
+    opacity 0.3s,
+    visibility 0s linear 0.3s;
 }
 
 .container {
